--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -40,7 +40,7 @@ A full-featured pure desktop GUI client, RedisInsight is available for Windows, 
 
 #### Step 1. Download RedisInsight
 
-To use RedisInsight on a local Mac, you can download from the RedisInsight page on the RedisLabs website:
+To use RedisInsight on a local Mac, you can download from the RedisInsight page on the Redis Labs website:
 
 [Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
@@ -49,6 +49,11 @@ To use RedisInsight on a local Mac, you can download from the RedisInsight page 
 Fill out the rest of the form and click “Download.” Please note that the package name is the combination of the platform and version as shown here:
 
 redisinsight-platform-version
+
+:::info TIP
+If you're using Redis Stack, you don't really need to install RedisInsight separately. 
+Redis Stack includes RedisInsight, a visualization tool for understanding and optimizing Redis data.
+:::
 
 #### Step 2. Install RedisInsight
 
