--- a/docs/create/azure/portal/index-azure-portal.mdx
+++ b/docs/create/azure/portal/index-azure-portal.mdx
@@ -44,7 +44,7 @@ Search for "azure redis cache " in the search dashboard and launch  [Azure Cache
 
 ### Step 4: Connecting to Redis database
 
-You can directly connect to the Redis cache instances using the redis client command(redis-cli) as shown:
+You can directly connect to the Redis cache instances using the Redis CLI command (`redis-cli`) as shown:
 
 ```
 sudo redis-cli -h demos.redis.cache.windows.net -p 6379
