--- a/docs/create/azure/portal/index-azure-portal.mdx
+++ b/docs/create/azure/portal/index-azure-portal.mdx
@@ -50,7 +50,7 @@ You can directly connect to the Redis cache instances using the Redis CLI comman
 sudo redis-cli -h demos.redis.cache.windows.net -p 6379
 demos.redis.cache.windows.net:6379>
 ```
-Please note that you can have multiple clients connected to Redis database at the same time. You should be able to perform CRUD operations with Redis keys. The above Redis client command might require password if you have setup authentication in your Redis configuration file. If a Redis password is not set, then it will perform the default connection to Redis server. You can insert data to Redis using SET and then fetch it back with the GET command. You can even run redis info command to get the full statistics of the Redis server(for example, memory usage, redis server load etc).
+Please note that you can have multiple clients connected to a Redis database at the same time. The above Redis client command might require a password if you have setup authentication in your Redis configuration file. You can insert data to Redis using the `SET` command and then fetch it back with the `GET` command. You can also run the Redis `INFO` command to get the statistics about the health  of the Redis server (for example, memory usage, Redis server load etc).
 ### Resources
 
 <div class="text--center">
