--- a/docs/howtos/chatapp/index-chatapp.mdx
+++ b/docs/howtos/chatapp/index-chatapp.mdx
@@ -232,7 +232,7 @@ Example:
 
 This will return IDs of chat rooms for user with ID: 2
 
-- Get list of messages ZREVRANGE room:{roomId} {offset_start} {offset_end}. 
+- Get list of messages `ZREVRANGE room:{roomId} {offset_start} {offset_end}`. 
 Example: 
 
  ```
