--- a/docs/create/jenkins/index-jenkins.mdx
+++ b/docs/create/jenkins/index-jenkins.mdx
@@ -100,7 +100,7 @@ The installation will generate a first-run password in the docker-cli output.
 
 
 
-Then open the jenkins URL [ http://localhost:8080/](http://localhost:8080/) and enter the password to unlock your instance and begin installation.
+Then open the Jenkins URL [ http://localhost:8080/](http://localhost:8080/) and enter the password to unlock your instance and begin installation.
 
 ![alt_text](images/image3.png)
 
