--- a/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
+++ b/docs/create/netlify/deploy-docusaurus-to-netlify/index-deploy-docusaurus-to-netlify.mdx
@@ -66,7 +66,7 @@ For this demo we'll use GitHub. Sign into GitHub to connect it to Netlify.
 ### Step 3. Import the project files to your GitHub account
 
 Once you connect your Netlify account to GitHub, you can start collaborating with your other team members.
-Before we do that, let's push a sample Docusaurus site to our Git repository. You can use a generic Docusaurus site if you want. The Redis Developer Hub is built on Docusaurus, so we are using it instead.
+Before we do that, let's push a sample Docusaurus site to our Git repository. You can use a generic Docusaurus site if you want. The Redis Developer Hub is built on Docusaurus, so we are using that instead.
 
 ![MyImage](images/netlify-importexisting.png)
 
