--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -13,7 +13,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 You can run Redis on Windows 10 using Windows Subsystem for Linux(a.k.a WSL2). WSL2 is a compatibility layer for running Linux binary executables natively on Windows 10 and Windows Server 2019. WSL2 lets developers run a GNU/Linux environment (that includes command-line tools, utilities, and applications) directly on Windows.
 
-Follow the below steps to run Redis database  on Microsoft Windows 10.
+Follow these instructions to run a Redis database  on Microsoft Windows 10.
 
 
 ### Step 1: Turn on Windows Subsystem for Linux
