--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -26,7 +26,7 @@ In Windows 10, Microsoft replaced Command Prompt with PowerShell as the default 
   Enable-WindowsOptionalFeature -Online -FeatureName Microsoft-Windows-Subsystem-Linux
  ```
 
-Reboot Windows service after making the change—note that you only need to do this one time.
+Reboot Windows after making the change — note that you only need to do this once.
 
 ### Step 2: Launch Microsoft Windows Store 
 
