--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -44,7 +44,7 @@ Installing Redis is simple and straightforward. The following example works with
   sudo apt-get upgrade
   sudo apt-get install redis-server
  ```
-Please note that the sudo command might or mightn't be required based on the user configuration on your Mac OS system.
+Please note that the `sudo` command might or mightn't be required based on the user configuration of your system.
 
 
 ### Step 4: Restart the Redis server
