--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -49,7 +49,7 @@ Please note that the `sudo` command might or mightn't be required based on the u
 
 ### Step 4: Restart the Redis server
 
-Running Redis require restart of the redis server and that can be achieved by the below commands:
+Restart the Redis server as follows:
 
  ```bash
   sudo service redis-server restart
