--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -58,7 +58,7 @@ Restart the Redis server as follows:
 
 ### Step 5: Verify if your Redis server is running
 
-In order to test redis database connectivity, you can use `redis-cli` command line to connect to the redis client. The redis command 'redis-cli ` can be used to connect to the Redis server by using the default port 6379. 
+Use the `redis-cli` command to test connectivity to the Redis database.
 
 
 
