--- a/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
+++ b/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
@@ -103,7 +103,7 @@ Assign the below permissions:
 
 ### Step 7. Connect to Elasticache from EC2 instance
 
-You can use redis client softwarsofte to connect to the remote Amazon Elasticache for Redis server endpoint URL.
+Use the `redis-cli` command to connect to the remote Amazon Elasticache for Redis server endpoint URL.
 
 
  ```bash
