--- a/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
+++ b/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
@@ -114,7 +114,7 @@ Use the `redis-cli` command to connect to the remote Amazon Elasticache for Redi
 
 ### Step 8. Setup RedisInsight
 
-In order to access Redis GUI, run the below docker command:
+In order to access the RedisInsight GUI, run the following Docker command:
 
  ```bash
   ubuntu@ip-10-0-0-254:~$ sudo docker run -v redisinsight:/db -p 8001:8001 redislabs/redisinsight:latest
