--- a/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
+++ b/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
@@ -130,7 +130,7 @@ In order to access the RedisInsight GUI, run the following Docker command:
 
 ### Step 9. Access RedisInsight
 
-To access the Redis GUI, open your preferred browser and access https://localhost:8001
+To access the RedisInsight GUI, open your preferred browser and access https://localhost:8001
 
 
 ![elasticache](images/image13.png)
