--- a/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsight/getting-started/index-gettingstarted.mdx
@@ -40,7 +40,7 @@ A full-featured pure desktop GUI client, RedisInsight is available for Windows, 
 
 #### Step 1. Download RedisInsight
 
-To use RedisInsight on a local Mac, you can download from the RedisInsight page on the Redis Labs website:
+To use RedisInsight on Mac OS, download it from the RedisInsight page on the Redis website:
 
 [Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
