--- a/docs/explore/redisinsight/streams/index-streams.mdx
+++ b/docs/explore/redisinsight/streams/index-streams.mdx
@@ -127,7 +127,7 @@ The consumer will start and consume the message you just posted, and wait for an
 
 ## Step 6: Posting the new messages
 
-In the first terminal, let us post new data in terms of messages:
+In the first terminal, let us post new entries to a Redis stream:
 
 
  ```bash
