--- a/docs/explore/redisinsight/streams/index-streams.mdx
+++ b/docs/explore/redisinsight/streams/index-streams.mdx
@@ -176,7 +176,7 @@ It also displays pending items/messages for the specific streams as shown above.
 - [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
 - [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
-- [Add data to Redis Stream using XADD command](https://redis.io/commands/xadd/)
+- [Add data to a Redis Stream using the XADD command](https://redis.io/commands/xadd/)
 - [XREAD with support for consumer groups using XREADGROUP command](https://redis.io/commands/xreadgroup/)
 - [How to use XREAD command(XREAD count)](https://redis.io/commands/xread/)
 - [Removes one or multiple messages from consumer group using XACK command](https://redis.io/commands/xack/)
