--- a/docs/explore/redisinsight/streams/index-streams.mdx
+++ b/docs/explore/redisinsight/streams/index-streams.mdx
@@ -179,7 +179,7 @@ It also displays pending items/messages for the specific streams as shown above.
 - [Add data to a Redis Stream using the XADD command](https://redis.io/commands/xadd/)
 - [XREAD with support for consumer groups using XREADGROUP command](https://redis.io/commands/xreadgroup/)
 - [How to use the XREAD command (XREAD count)](https://redis.io/commands/xread/)
-- [Removes one or multiple messages from consumer group using XACK command](https://redis.io/commands/xack/)
+- [Remove one or multiple messages from consumer group using XACK command](https://redis.io/commands/xack/)
 - [Removing single items from a stream using stream ID](https://redis.io/docs/manual/data-types/streams/#removing-single-items-from-a-stream)
 ##
 
