--- a/docs/howtos/analytics/index-analytics.mdx
+++ b/docs/howtos/analytics/index-analytics.mdx
@@ -10,7 +10,7 @@ Interactive analytics dashboards serve several purposes. They allow you to share
 
 
 Redis is an open source, in-memory, key-value data store most commonly used as a primary database, cache, message broker, and queue. Redis cache delivers sub-millisecond response times, enabling fast and powerful real-time applications in industries such as gaming, fintech, ad-tech, social media, healthcare, and IoT.
-This tutorial shows a basic analytics dashboard app that uses Redis Bitmap written in NodeJS (JavaScript).
+This tutorial shows a basic analytics dashboard app writen in NodeJS (JavaScript) that uses the Redis Bitmap data type.
 
 
 <div class="text--center">
