--- a/docs/howtos/analytics/index-analytics.mdx
+++ b/docs/howtos/analytics/index-analytics.mdx
@@ -58,7 +58,7 @@ Go to /server folder (cd ./server) and then execute the following command:
   ```
 
 You may need to preface the docker command with `sudo`. If you don't want to use sudo, create a Unix group called docker and add users to it. When the Docker daemon starts, it creates a Unix socket accessible by members of the docker group.
-Once the Redis database is up and running, you can verify the connection to redis instance using the  redis client software.
+Once the Redis database is up and running, you can connect to it using the `redis-cli` command.
 
 
 :::info TIP
