--- a/docs/howtos/analytics/index-analytics.mdx
+++ b/docs/howtos/analytics/index-analytics.mdx
@@ -64,7 +64,7 @@ Once the Redis database is up and running, you can connect to it using the `redi
 :::info TIP
 - By default, Redis runs on port 6379 but you can change it by specifying an alternative host port in the docker compose file. 
 - You can use a Redis configuration file and mount it as volumes in the docker compose YAML file. 
-- You can connect to the redis instance by using `redis-cli -h hostname -p port` command. 
+- You can connect to the Redis instance by using `redis-cli -h hostname -p port` command. 
 - You can even run redis info command to get overall statistic details of redis instance like cache, memory stats, redis metrics and modules enabled. 
 - You can use a redis cli command called `redis monitor` to get real time redis logs . 
 :::
