--- a/docs/howtos/chatapp/index-chatapp.mdx
+++ b/docs/howtos/chatapp/index-chatapp.mdx
@@ -25,7 +25,7 @@ Please note that this code is open source. You can find the link at the end of t
 In this tutorial, we will see how to develop real time messaging apps with Flask, Socket.IO and Redis. This example uses Redis Pub/sub feature  combined with websockets for implementing the real time chat app communication between client and server.
 
 
-Please note that this code is open source and implements basic feature of live chat app. You can find the link at the end of this tutorial..
+Please note that this code is open source and implements the basic features of a live chat app. You can find the link at the end of this tutorial.
 
 
 ### Step 1. Prerequisite
