--- a/docs/howtos/chatapp/index-chatapp.mdx
+++ b/docs/howtos/chatapp/index-chatapp.mdx
@@ -28,7 +28,7 @@ In this tutorial, we will see how to develop real time messaging apps with Flask
 Please note that this code is open source and implements the basic features of a live chat app. You can find the link at the end of this tutorial.
 
 
-### Step 1. Prerequisite
+### Step 1. Prerequisites
 
 In order to perform this instant messaging app development, you will need the following software:
 
