--- a/docs/howtos/chatapp/index-chatapp.mdx
+++ b/docs/howtos/chatapp/index-chatapp.mdx
@@ -53,7 +53,7 @@ yarn install
 
 ### Step 4. Starting the frontend
 
-To implement the frontend of the chatting app, run the below command:
+To run the frontend of the chat app, run the following command:
 
 ```
 yarn start
