--- a/docs/howtos/chatapp/index-chatapp.mdx
+++ b/docs/howtos/chatapp/index-chatapp.mdx
@@ -60,7 +60,7 @@ yarn start
 ```
 
 ```
-You can now access chat window in the browser.
+You can now access a chat window in the browser.
 
   Local:            http://localhost:3000
   On Your Network:  http://192.168.1.9:3000
