--- a/docs/howtos/chatapp/index-chatapp.mdx
+++ b/docs/howtos/chatapp/index-chatapp.mdx
@@ -79,7 +79,7 @@ cd ..
 pip3 install -r requirements.txt
 ```
 
-### Step 5: Running  Backend
+### Step 5: Running the Backend
 
 To access the fully working chat app,where you can type chat message run the below commands:
 
