--- a/docs/howtos/chatapp/index-chatapp.mdx
+++ b/docs/howtos/chatapp/index-chatapp.mdx
@@ -81,7 +81,7 @@ pip3 install -r requirements.txt
 
 ### Step 5: Running the Backend
 
-To access the fully working chat app,where you can type chat message run the below commands:
+To start the fully chat app, run the following commands:
 
 
 ```
