--- a/docs/howtos/chatapp/index-chatapp.mdx
+++ b/docs/howtos/chatapp/index-chatapp.mdx
@@ -100,7 +100,7 @@ python3 app.py
 
 ![Chatapp](chatapp_homepage.png)
 
-### How it works?
+### How does it work?
 
 This instant messaging app server works as a basic REST API which involves keeping the session and handling the user state in the chat room (besides the WebSocket/real-time part). When the server starts, the initialization step occurs. At first, a new Redis connection is established and it's checked whether it's needed to load the demo data.
 
